Detalles en definiciones. Ejercicios guia 6

--- a/5-sol/definiciones.tex
+++ b/5-sol/definiciones.tex
@@ -88,7 +88,7 @@
 \renewcommand{\theejercicio}{\arabic{ejercicio}} % el contador es un número arabic
 \newcommand{\ejercicio}{%
 	\stepcounter{ejercicio}% incremento en uno
-  \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{}[ ]%
+  \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{\ejercicio}[ ]%
 	\section*{\theejercicio.}%
 }
 
