--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -79,7 +79,8 @@
 	      $m \en \naturales_0$ si $(X - \alpha)^m \dividea f$ y $(X - \alpha)^{m+1} \noDivide f$.
 	      O sea, $f = (X - \alpha)^m \cdot q(\alpha) \distinto 0$
 
-	\item Vale que $\alpha$ es raíz múltiple de $f \sisolosi f(\alpha) = 0$ y $f(\alpha) = 0 \sisolosi \alpha$ es raíz de $(f:f'),\, X - \alpha \dividea (f:f')$
+	\item Vale que $\alpha$ es raíz múltiple de $f \sisolosi f(\alpha) = 0$ y $f(\alpha) = 0 \sisolosi \alpha$
+      es raíz de $(f:f'),\, X - \alpha \dividea (f:f')$
 
 \end{itemize}
 
