--- a/7-guia/definiciones.tex
+++ b/7-guia/definiciones.tex
@@ -90,7 +90,7 @@
 \renewcommand{\theejercicio}{\arabic{ejercicio}} % el contador es un número arabic
 \newcommand{\ejercicio}{%
 	\stepcounter{ejercicio}% incremento en uno
-  \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{}[ ]%
+  \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{\separador}[ ]%
 	\section*{\theejercicio.}%
 }
 
