--- a/1-sol/definiciones.tex
+++ b/1-sol/definiciones.tex
@@ -56,6 +56,8 @@
 \def\llamadaII{\stackrel{\cyan{$*^2$}}}
 \def\llamadaIII{\stackrel{\cyan{$*^3$}}}
 
+\newcommand{\llamada}[1]{\stackrel{\cyan{\FiveStar$^{#1}$}}{} }
+
 % separador
 \def\separador{\noindent\rule{\linewidth}{0.4pt}\\}
 \def\separadorCorto{\noindent\rule{0.5\linewidth}{0.4pt}\\}
