--- a/1-sol/1-sol.tex
+++ b/1-sol/1-sol.tex
@@ -21,6 +21,7 @@
 \usepackage{tikz} % para graficar
 \usepackage{cancel}
 \usepackage{titlesec} % para editar titulos y hacer secciones con formato a medida
+\usepackage{bbding} % símbolos de donde uso FiveStar
 
 % para hacer los graficos tipo grafos
 \usetikzlibrary{shapes,arrows.meta, chains, matrix, calc, trees, positioning, fit}
@@ -36,7 +37,7 @@
 
 % Info para armar título.
 \title{Práctica 1 de álgebra 1} % título
-\author{D. Garraz} % autor
+\author{Nad Garraz} % autor
 \date{last update: \today} % Cambiar de ser necesario
 % \maketitle  % Para que aprezca el título en el documento
 
