--- a/6-sol/6-sol.tex
+++ b/6-sol/6-sol.tex
@@ -514,8 +514,8 @@ $z_n =
 
 	Dado que $p(1), p(2), p(2k),p(2k+1),p(2k+2),p(2k+3)$ resultaron ser verdaderas, entonces
 	por criterio de inducción se concluye que $p(n)$ también lo es $\paratodo n \en \naturales$.\\
-    Dado que la sucesión $z_n$   tiene solo 2 imágenes, para cualquier $n\en \naturales$ se concluye que
-    $z_n \en G_6\ \paratodo n \en \naturales$ 
+	Dado que la sucesión $z_n$   tiene solo 2 imágenes, para cualquier $n\en \naturales$ se concluye que
+	$z_n \en G_6\ \paratodo n \en \naturales$
 \end{minipage}
 \begin{minipage}{0.2\textwidth}
 	\begin{tikzpicture}[baseline=0,scale = 1.4, every node/.style={font=\tiny}]
@@ -539,4 +539,48 @@ $z_n =
 	\end{tikzpicture}
 \end{minipage}
 \red{corroborar que no sea un delirio}
+
+%14
+\ejercicio
+Se define en $\complejos - \set{0}$ la relación $\relacion$ dada por $z \relacion w \sisolosi z \conj w \en \reales_{>0}$.
+\begin{enumerate}[label=\roman*)]
+	\item Probar que $\relacion$ es una relación de equivalencia.
+	\item Dibujar en le plano complejo la clase de equivalencia de $z = 1 + i$.
+\end{enumerate}
+
+\separadorCorto
+
+\begin{enumerate}[label=\roman*)]
+	\item Dado un $z = r\cdot e^{i\theta}$, en forma exponencial $\re{z} >0 \sisolosi \theta = 2k\pi$ con $k \en \enteros$
+	      \begin{itemize}
+		      \item  \textit{Reflexividad: } $z = r e^{i\theta},\, z \relacion z = r^2 e^{2\theta i}$ por lo tanto
+		            $z \relacion z \sisolosi 2\theta = 2 k\pi \sisolosi \theta = k\pi \Tilde$
+
+		      \item  \textit{Simetría: }
+		            $\llave{l}{
+				            z \relacion w = r s  e^{(\theta -\varphi )i} \sisolosi \theta = 2k_1\pi + \varphi \Tilde\\
+				            w \relacion z = r s  e^{(\varphi - \theta )i} \sisolosi \theta = -2k_2\pi + \varphi = 2k_3\pi + \varphi  \Tilde
+			            }$
+
+		      \item  \textit{Transitividad: }
+		            $\llave{l}{
+				            z \relacion w = r s  e^{(\theta - \varphi )i} \sisolosi \theta = 2k_1\pi + \varphi \\
+				            w \relacion v = r t  e^{(\varphi - \alpha )i} \sisolosi \varphi = 2k_2\pi + \alpha \\
+				            \entonces z \relacion v \sisolosi \theta =  2k_1\pi + \ub{\varphi}{2k_2\pi + \alpha} = 2\pi(k_1 + k_2) + \alpha = 2k_3\pi + \alpha \Tilde
+			            }$
+		            La relación $\relacion$ es de equivalencia.
+	      \end{itemize}
+
+	\item
+	      arg$( 1 + i) = \frac{\pi}{4}$ los $w \en \complejos$ tales que $z \relacion w \sisolosi \text{arg}(w) =\frac{1}{4}\pi$ \\
+	      \begin{tikzpicture}[baseline=0,scale = 1.4, every node/.style={font=\tiny}]
+		      \draw[ultra thin,->,gray] (-1.5,0) -- (1.5,0) node[below] {Re};
+		      \draw[ultra thin,->,gray] (0,-1.5) -- (0,1.5) node[right] {Im};
+		      \draw[magenta] (0,0) -- (2,2) node[right] {$\clase{z}$};
+		      % \draw[ultra thin] (0,0) circle (1);
+		      \filldraw[thin] (1,1) circle (1pt) node[below, right] {$z$}; % Added the origin
+		      \draw[thin] (0,0) circle (2pt); % Added the origin
+	      \end{tikzpicture}
+\end{enumerate}
+
 \end{document}
